[gd_scene load_steps=7 format=3 uid="uid://dbtj6t5f2hplo"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_5yecs"]
[ext_resource type="Texture2D" uid="uid://bwpt4087gmdfu" path="res://graphics/projectiles/player.png" id="2_y77wv"]
[ext_resource type="Texture2D" uid="uid://ghh02tewjbgp" path="res://graphics/projectiles/ball.png" id="3_rpav3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3rsjb"]
radius = 61.0082

[sub_resource type="CircleShape2D" id="CircleShape2D_7504i"]
radius = 115.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hsxct"]
radius = 66.0076

[node name="Player" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_5yecs")
throw_speed = 2500

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3rsjb")

[node name="CatchArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CatchArea"]
polygon = PackedVector2Array(158, -116, 3, -81, -54, -42, -58, 27, 7, 77, 158, 115)

[node name="PickupArea" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_7504i")
debug_color = Color(0.576471, 0.545098, 0.266667, 0.419608)

[node name="PlayerSprite" type="Sprite2D" parent="."]
self_modulate = Color(0.0901961, 0.309804, 0.278431, 1)
rotation = -1.5708
texture = ExtResource("2_y77wv")

[node name="HeldItemSprite" type="Sprite2D" parent="."]
position = Vector2(95, 56)
scale = Vector2(0.445313, 0.445313)
texture = ExtResource("3_rpav3")

[node name="ThrowFromMarker" type="Marker2D" parent="."]
position = Vector2(102, 3)

[node name="ReturnBonusSpeedTimer" type="Timer" parent="."]
one_shot = true

[node name="BodyHitArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyHitArea"]
shape = SubResource("CircleShape2D_hsxct")

[connection signal="body_entered" from="BodyHitArea" to="." method="_on_body_hit_area_body_entered"]
